--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,5 +1,6 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/zt.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://github.com/brkhkd3127/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/vdhG75Ez1eTyeZN/raw/master/hG75Ez1eTyeZN.webm" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/vdYongHeng-360p/raw/master/YongHeng-360p.webm" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/vdLijianhui-200804-720/raw/master/Lijianhui-200804-720.webm" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/vddmt/raw/master/dmt.webm" target="_blank">江鬼其人</a> | <a href="https://gitlab.com/szzdlab/vdszt/raw/master/szt.webm" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/vdUc6y/raw/master/Uc6y.webm" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/vd425/raw/master/425.webm" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/vdlin-720p/raw/master/lin-720p.webm" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/vdwnrl/raw/master/wnrl.webm" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/vdmtdwh/raw/master/mtdwh.webm" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/vdzfzx/raw/master/zfzx.webm" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/vd5-YiSu_MH-360p/raw/master/5-YiSu_MH-360p.webm" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/vd5N.8/raw/master/5N.8.webm" target="_blank">活摘调查</a> | <a href="https://gitlab.com/szzdlab/vdTdowhauWx9WiM/raw/master/TdowhauWx9WiM.webm" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/vd1-Xuezhongmei_MH-360p/raw/master/1-Xuezhongmei_MH-360p.webm" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/vdhuangxiaomin-tuidang/raw/master/huangxiaomin-tuidang.webm" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/vdwm/raw/master/wm.webm" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/vdfy/raw/master/fy.webm" target="_blank">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/13/n13161371.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2019/02/610130108151779-600x400-320x200.jpg"><p align="center">高智晟被失踪四年 外界吁国际制裁中共</p></a>
+<tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/13/n13161101.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2021/08/id13161319-ttl7dayTzA_article-320x200.jpg"><p align="center">【方菲访谈】专访王维洛：海绵城市是伪命题（2）</p></a>
+<a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/13/n13161101.md#1" title="【方菲访谈】专访王维洛：海绵城市是伪命题（2）""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/08/id13161319-ttl7dayTzA_article-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/13/n13161371.md#1" title="高智晟被失踪四年 外界吁国际制裁中共""><img width="73" src="https://i.epochtimes.com/assets/uploads/2019/02/610130108151779-600x400-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/13/n13161004.md#1" title="美国调查病毒源头 专家：中共甩锅不会奏效""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/08/id13153424-GettyImages-1210149337-600x400-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/14/n13161085.md#1" title="为墨西哥毒枭换汇 华人洗钱组织的牢狱路""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/08/id13161094-151439-320x200.jpg">&nbsp;</a>
@@ -11,25 +12,24 @@
 <a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/4/n13139147.md#1" title="【忠义传】铁木真的福将 者勒蔑冒死救主""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/Jelme__Genghis_Khan-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/13/n13159797.md#1" title="“我们在非洲肯尼亚修炼法轮大法”""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/08/id13159852-2021-8-12-rwanda-falun-gong-cultivation_01-320x200.jpeg">&nbsp;</a>
 <a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/13/n13159982.md#1" title="【疫情8.13】白宫拨款助农村医院抗击病毒""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/01/white-house-1953465_1920-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/13/n13159618.md#1" title="“别无选择” 大陆多所民办学校被政府接管""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/08/id13146589-GettyImages-107502021-600x400-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/jwwcna340/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://jwwcna340.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>2分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/14/n13161660.md#1">分析：Delta疫情挑战中共“清零”政策</a><br>
-:clock8: <em>44分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/14/n13161657.md#1">美国安部：再实行防疫限制 或引发暴力事件</a><br>
-:clock8: <em>46分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/14/n13161681.md#1">纽约州议会暂停对库默弹劾调查</a><br>
-:clock8: <em>48分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/14/n13161693.md#1">纽约州暂停驱逐令遭最高法院部分取消 霍楚承诺尽快解决</a><br>
-:clock8: <em>51分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/14/n13161668.md#1">美国染疫住院人数激增 五州ICU占用率超90%</a><br>
-:clock8: <em>53分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/14/n13161665.md#1">学生难保持社交距离 纽约公校开学恐陷混乱</a><br>
+:clock8: <em>3分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/14/n13161416.md#1">岳阳楼市限价 房企打折不得低于备案价85％</a><br>
+:clock8: <em>44分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/14/n13161660.md#1">分析：Delta疫情挑战中共“清零”政策</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/14/n13161657.md#1">美国安部：再实行防疫限制 或引发暴力事件</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/14/n13161681.md#1">纽约州议会暂停对库默弹劾调查</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/14/n13161693.md#1">纽约州暂停驱逐令遭最高法院部分取消 霍楚承诺尽快解决</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/14/n13161668.md#1">美国染疫住院人数激增 五州ICU占用率超90%</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/12/n13158073.md#1">北戴河会议后中共首发文件 暗示习近平续任五年</a><br>
-<a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/12/n13156436.md#1">中共将严审卡拉OK曲目 引来网民嘲讽</a><br>
 <a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/13/n13159411.md#1">【翻墙必看】中共喉舌深夜发文 习或渡过难关</a><br>
 <a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/13/n13159005.md#1">中共出手打击娱乐圈 吴亦凡后22位明星被点名</a><br>
 <a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/13/n13159785.md#1">曝领导强制接种 沪女打国药疫苗后患癫痫</a><br>
+<a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/13/n13159618.md#1">“别无选择” 大陆多所民办学校被政府接管</a><br>
 <a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/12/n13156897.md#1">【翻墙必看】美军发射洲际弹道导弹的震撼视频</a><br>
 <a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/12/n13157721.md#1">又要搞运动？中共发布五年“加强整顿”计划</a><br>
 <a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/12/n13157381.md#1">党媒发文批“大号流感”论 疑针对张文宏</a><br>
+<a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/12/n13158404.md#1">张智霖打算退出演艺圈？袁咏仪霸气回应</a><br>
 <a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/13/n13159180.md#1">北京严厉打击课外培训 令昂贵家教转入地下</a><br>
-<a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/13/n13159051.md#1">【一线采访】扬州高风险区居民曝封锁细节</a><br>
 <br><p align="center"><a href="https://github.com/jwwcna340/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
 <a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/13/n13160196.md#1">【新闻大家谈】北京发文“防个人专断”引猜测</a><br>
 <a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/13/n13159029.md#1">王赫：比核武扩张更危险的是中共的核战思维</a><br>
@@ -49,8 +49,8 @@
 <a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/12/n13157273.md#1">【一线采访】湖北洪水 村民：淹死不少人</a><br>
 <a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/13/n13159795.md#1">郑州大量泡水车空拍照惊人 网民：车主呢？</a><br>
 <a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/14/n13161456.md#1">【翻墙必看】“防个人专断”影射谁？</a><br>
-<a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/13/n13161101.md#1">【方菲访谈】专访王维洛：海绵城市是伪命题（2）</a><br>
 <a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/13/n13160158.md#1">【一线采访】洪水预警不及时 随州数十人遇难</a><br>
+<a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/13/n13161101.md#1">【方菲访谈】专访王维洛：海绵城市是伪命题（2）</a><br>
 <a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/13/n13161001.md#1">自曝女儿长的像赵又廷 高圆圆将夫君摆第一</a><br>
 <a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/13/n13160471.md#1">【财商天下】中共力推数字人民币 背后五大目的</a><br>
 <a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/13/n13160165.md#1">2021上半年 大庆法轮功学员遭迫害概述</a><br>
@@ -105,9 +105,9 @@
 ```diff
 !退出中共党、团、队总人数:
 
-!共 381,916,274 人
+!共 381,917,429 人
 ```
-</strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/11/n13155668.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/08/id13155925-9e116f019b67ae913085fdeb5453b987@1200x1200-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/11/n13155668.md#1">兰州八旬法轮功学员陷冤狱三年 被逼喝尿</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13156394.md#1">专家：中共或滥用苹果新扫描软件追捕异己</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/11/n13155489.md#1">德国秋季大选 绿党若参与执政将对中俄更强硬</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/11/n13154437.md#1">广东粤曲家转发帖文被传唤 审讯中三次昏倒</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/10/n13152242.md#1">辽宁法轮功学员魏明霞被看守所迫害致死</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/10/n13152467.md#1">【拍案惊奇】每天一锤打压民企 习近平收财权</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13161003.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/08/id13161103-GettyImages-484755619-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13161003.md#1">万隆辞任万洲国际行政总裁 子女继承成焦点</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13160027.md#1">大陆百亿级房企债券违约 触发交叉违约条款</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159542.md#1">传大陆“华尔街英语”将宣布破产</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13158761.md#1">特斯拉7月在华销售环比下滑近七成</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13157766.md#1">中国7月金融数据疲弱 学者分析主因</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13157718.md#1">海运现塞港危机 中国舟山港因疫情封港</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/14/n13161660.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/07/id13127158-GettyImages-1234281339-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/14/n13161660.md#1">分析：Delta疫情挑战中共“清零”政策</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13160390.md#1">【名家专栏】中国人想要美好未来 中共需下台</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13160836.md#1">捍卫台湾 美采用“切香肠”战术反制中共</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13160213.md#1">中共再炒“美军投毒论” 美国防部：没有证据</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13160055.md#1">回顾飞虎队成立80周年 两岸谁有话语权？</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159904.md#1">美日印澳安全对话 强调台海和平安全重要性</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13161280.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/08/id13161306-GettyImages-53049616-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13161280.md#1">宁波因疫情封部分港口 或导致全球货运积压</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159728.md#1">四川多地强迫打疫苗 官员敛财 有人打第三针</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159044.md#1">湖北柳林洪灾 亲历者目睹邻居被大水冲走</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159009.md#1">湖北随州遭洪水突袭 妻子遇难前给夫发诀别信</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13157122.md#1">视频：湖北随州洪灾柳林镇危急 大水涨至二楼</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13156646.md#1">南京市ICU病房护士确诊染疫</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/14/n13161557.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/14/n13161557.md#1">三退声明精选（2021/08/13）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13160672.md#1">中共推法治政府建设路线图？网友公开抨击</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13160436.md#1">中国长期物化女性 外媒：有毒文化根深蒂固</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13160050.md#1">国台酒业女员工被性侵一个月后公司才回应</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159632.md#1">组图：武汉疫情持续扩散 中风险区范围扩大</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13158831.md#1">三退声明精选（2021/08/12）</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13156222.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/08/id13147078-GettyImages-880629318-600x400_1200x1200@1200x1200-320x200.jpeg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13156222.md#1">上海弱化英语教育 分析：闭关锁国前兆</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/9/n13150235.md#1">家长揭赣州中考志愿填报存在弊端 校方否认</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/8/n13147071.md#1">上海率先定“习思想”为必修课 评论：加强洗脑</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/7/n13146497.md#1">中共为何将学校“民转公”整顿教育培训？</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/7/n13144989.md#1">香港教师被“志愿”参加暑期托管班 却与评级挂钩</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/5/n13141966.md#1">65岁刘晓庆扮老获好评 笑称全世界都惊讶</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
+</strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/11/n13155668.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/08/id13155925-9e116f019b67ae913085fdeb5453b987@1200x1200-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/11/n13155668.md#1">兰州八旬法轮功学员陷冤狱三年 被逼喝尿</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13156394.md#1">专家：中共或滥用苹果新扫描软件追捕异己</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/11/n13155489.md#1">德国秋季大选 绿党若参与执政将对中俄更强硬</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/11/n13154437.md#1">广东粤曲家转发帖文被传唤 审讯中三次昏倒</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/10/n13152242.md#1">辽宁法轮功学员魏明霞被看守所迫害致死</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/10/n13152467.md#1">【拍案惊奇】每天一锤打压民企 习近平收财权</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/14/n13161416.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2008/07/shutterstock_659620672-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/14/n13161416.md#1">岳阳楼市限价 房企打折不得低于备案价85％</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13161003.md#1">万隆辞任万洲国际行政总裁 子女继承成焦点</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13160027.md#1">大陆百亿级房企债券违约 触发交叉违约条款</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159542.md#1">传大陆“华尔街英语”将宣布破产</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13158761.md#1">特斯拉7月在华销售环比下滑近七成</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13157766.md#1">中国7月金融数据疲弱 学者分析主因</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/14/n13161660.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/07/id13127158-GettyImages-1234281339-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/14/n13161660.md#1">分析：Delta疫情挑战中共“清零”政策</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13160390.md#1">【名家专栏】中国人想要美好未来 中共需下台</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13160836.md#1">捍卫台湾 美采用“切香肠”战术反制中共</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13160213.md#1">中共再炒“美军投毒论” 美国防部：没有证据</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13160055.md#1">回顾飞虎队成立80周年 两岸谁有话语权？</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159904.md#1">美日印澳安全对话 强调台海和平安全重要性</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13161280.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/08/id13161306-GettyImages-53049616-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13161280.md#1">宁波因疫情封部分港口 或导致全球货运积压</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159728.md#1">四川多地强迫打疫苗 官员敛财 有人打第三针</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159044.md#1">湖北柳林洪灾 亲历者目睹邻居被大水冲走</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159051.md#1">【一线采访】扬州高风险区居民曝封锁细节</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159009.md#1">湖北随州遭洪水突袭 妻子遇难前给夫发诀别信</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13157122.md#1">视频：湖北随州洪灾柳林镇危急 大水涨至二楼</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/14/n13161557.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/14/n13161557.md#1">三退声明精选（2021/08/13）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13160672.md#1">中共推法治政府建设路线图？网友公开抨击</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13160436.md#1">中国长期物化女性 外媒：有毒文化根深蒂固</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13160050.md#1">国台酒业女员工被性侵一个月后公司才回应</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159632.md#1">组图：武汉疫情持续扩散 中风险区范围扩大</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13158831.md#1">三退声明精选（2021/08/12）</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13156222.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/08/id13147078-GettyImages-880629318-600x400_1200x1200@1200x1200-320x200.jpeg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13156222.md#1">上海弱化英语教育 分析：闭关锁国前兆</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/9/n13150235.md#1">家长揭赣州中考志愿填报存在弊端 校方否认</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/8/n13147071.md#1">上海率先定“习思想”为必修课 评论：加强洗脑</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/7/n13146497.md#1">中共为何将学校“民转公”整顿教育培训？</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/7/n13144989.md#1">香港教师被“志愿”参加暑期托管班 却与评级挂钩</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/5/n13141966.md#1">65岁刘晓庆扮老获好评 笑称全世界都惊讶</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/13/n13158773.md#1">分析：习近平伸出干预市场的第三只手</a><br>
 <a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/10/n13153422.md#1">奥运场外大陆高涨的“民族主义”情绪</a><br>
 <a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/5/n13141769.md#1">基辛格访华50年 中共对美仇恨从未变</a><br>
